--- a/index.html
+++ b/index.html
@@ -9,5 +9,5 @@
     <p id="counter">Loading button click data.</p>
     <button id="myButton">Click me!</button>
 </body>
-<script src="client.js"></script>
+<script src="public/client.js"></script>
 </html>
